--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-bcp47",
-  "version": "1.0.0-pre0",
+  "version": "1.0.0",
   "description": "A middleware to parse language selection inputs",
   "main": "index.js",
   "scripts": {
