--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/kraken-js/express-bcp47",
   "dependencies": {
-    "bcp47": "^1.1.0"
+    "bcp47": "^1.1.0",
+    "debuglog": "^1.0.1"
   },
   "devDependencies": {
     "express": "^4.10.7",
