--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A middleware to parse language selection inputs",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "tap test/*.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,6 @@
     "express": "^4.10.7",
     "mock-req": "^0.1.0",
     "mock-res": "^0.2.1",
-    "tape": "^3.0.3"
+    "tap": "^1.2.0"
   }
 }
