--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/kraken-js/express-bcp47",
   "dependencies": {
     "bcp47": "^1.1.0",
-    "debuglog": "^1.0.1"
+    "debuglog": "^1.0.1",
+    "negotiator": "^0.5.3"
   },
   "devDependencies": {
     "express": "^4.10.7",
