--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
-
-node_js:
-  - "0.12"
-  - "0.10"
-  - "iojs"
-
 sudo: false
+node_js:
+  - "0.10"
+  - "4"
+  - 6
+matrix:
+  fast_finish: true
